--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "just-tech-news",
   "version": "1.0.0",
   "description": "news app",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,5 +22,7 @@
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
